--- a/templates/profile.html
+++ b/templates/profile.html
@@ -49,7 +49,7 @@
 				<div class="d-flex gap-1">
 					<button type="button" class="btn btn-primary my-1" data-bs-toggle="collapse"
 						data-bs-target="" aria-expanded="false"
-						aria-controls="postPetDescription" id="readDescriptionBtn">Ler descrição</button>
+						aria-controls="postPetDescription" id="readDescriptionBtn"><i class="bi-book"></i>&nbsp;Ler descrição</button>
 				</div>
 			</div>
 		</div>
