--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -49,7 +49,7 @@
 					<button type="button" class="btn btn-primary my-1"><i class="bi-heart"></i>&nbsp;Audotar</button>
 					<button type="button" class="btn btn-primary my-1" data-bs-toggle="collapse"
 						data-bs-target="" aria-expanded="false"
-						aria-controls="postPetDescription" id="readDescriptionBtn">Ler descrição</button>
+						aria-controls="postPetDescription" id="readDescriptionBtn"><i class="bi-book"></i>&nbsp;Ler descrição</button>
 				</div>
 			</div>
 		</div>
